[package]
name = "dailies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.17", features = ["persistence"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
